--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src --ext ts,js"
+    "lint": "eslint src --ext ts,tsx,js"
   },
   "dependencies": {
     "next": "9.5.3",
