--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src --ext ts,tsx,js"
   },
   "dependencies": {
-    "next": "9.5.3",
+    "next": "^10.1.3",
     "next-images": "^1.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
