--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "eslint src --ext ts,tsx,js"
   },
   "dependencies": {
-    "next": "^10.1.3",
+    "next": "^11.0.0",
     "next-images": "^1.4.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass": "^1.35.1",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@types/node": "^14.6.4",
-    "@types/react": "^16.9.49",
+    "@types/node": "^15.12.4",
+    "@types/react": "^17.0.11",
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
@@ -25,6 +26,7 @@
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-next": "^11.0.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.21.2",
