--- a/package.json
+++ b/package.json
@@ -9,24 +9,29 @@
     "lint": "eslint src --ext ts,tsx,js"
   },
   "dependencies": {
-    "next": "^11.0.0",
+    "axios": "^0.21.1",
+    "next": "^10.1.3",
     "next-images": "^1.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.35.1",
-    "styled-components": "^5.2.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "7.3.5",
+    "react-icons": "^4.2.0",
+    "sass": "^1.32.13",
+    "styled-components": "^5.2.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
-    "@types/node": "^15.12.4",
-    "@types/react": "^17.0.11",
+    "@types/node": "^14.6.4",
+    "@types/react": "^16.9.49",
+    "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
+    "autoprefixer": "^10.2.5",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-next": "^11.0.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.21.2",
@@ -34,7 +39,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4",
+    "postcss": "^8.2.13",
     "prettier": "^2.2.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.3.2"
   }
 }
