--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "next": "^10.1.3",
-    "next-images": "^1.4.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^11.0.1",
+    "next-images": "^1.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "7.3.5",
     "react-icons": "^4.2.0",
-    "sass": "^1.32.13",
-    "styled-components": "^5.2.0",
-    "tailwindcss": "^2.0.2"
+    "sass": "^1.36.0",
+    "styled-components": "^5.3.0",
+    "tailwindcss": "^2.2.7"
   },
   "devDependencies": {
     "@types/node": "^14.6.4",
